# BlackJackAPI

./: README.md
api/: Cargo.toml  Rocket.toml
api/migrations/: 20230421034457_table-setup.sql
api/src/: blackjack.rs  main.rs
